--- a/src/main/resources/templates/certification/new-certification.html
+++ b/src/main/resources/templates/certification/new-certification.html
@@ -117,6 +117,12 @@
                             나의 예약 현황
                         </a>
 
+                        <a class="dropdown-item"
+                           th:href="@{/pets-care/reports/users}"
+                           th:if="${currentUser != null and currentUser.role.name() != 'ADMIN'}">
+                            나의 문의 내역
+                        </a>
+
                         <!-- ADMIN(관리자)인 경우 -->
                         <div th:if="${currentUser != null and currentUser.role.name() == 'ADMIN'}">
                             <div class="dropdown-divider"></div>
