--- a/src/main/resources/templates/reservation/reservation-detail.html
+++ b/src/main/resources/templates/reservation/reservation-detail.html
@@ -116,6 +116,12 @@
                             나의 예약 현황
                         </a>
 
+                        <a class="dropdown-item"
+                           th:href="@{/pets-care/reports/users}"
+                           th:if="${currentUser != null and currentUser.role.name() != 'ADMIN'}">
+                            나의 문의 내역
+                        </a>
+
                         <!-- ADMIN(관리자)인 경우 -->
                         <div th:if="${currentUser != null and currentUser.role.name() == 'ADMIN'}">
                             <div class="dropdown-divider"></div>
@@ -123,6 +129,7 @@
                             <a class="dropdown-item" th:href="@{/pets-care/admin/members}">회원 관리</a>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/reservations}">예약 관리</a>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/amounts}">포인트 내역 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/reports/users}">문의 내역 관리</a>
                         </div>
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item text-danger" onclick="event.preventDefault(); document.getElementById('logoutForm').submit();">로그아웃</a>
@@ -229,6 +236,11 @@
         <button id="cancelReservation" class="btn btn-danger" th:data-reservation-id="${reservation.id}"
                 th:if="${reservation.status.name() != 'CANCEL'}">예약 취소</button>
         <button class="btn btn-secondary" onclick="history.back()">뒤로 가기</button>
+
+        <a class="btn btn-warning"
+           th:href="@{/pets-care/reports/users/{memberId}/new(memberId=${reservation.customerId})}">
+            유저 신고하기
+        </a>
     </div><br>
 
     <!-- 리뷰 섹션 -->
