--- a/src/main/resources/templates/reservation/reservation-list.html
+++ b/src/main/resources/templates/reservation/reservation-list.html
@@ -117,6 +117,12 @@
                             나의 예약 현황
                         </a>
 
+                        <a class="dropdown-item"
+                           th:href="@{/pets-care/reports/users}"
+                           th:if="${currentUser != null and currentUser.role.name() != 'ADMIN'}">
+                            나의 문의 내역
+                        </a>
+
                         <!-- ADMIN(관리자)인 경우 -->
                         <div th:if="${currentUser != null and currentUser.role.name() == 'ADMIN'}">
                             <div class="dropdown-divider"></div>
@@ -124,6 +130,7 @@
                             <a class="dropdown-item" th:href="@{/pets-care/admin/members}">회원 관리</a>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/reservations}">예약 관리</a>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/amounts}">포인트 내역 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/reports/users}">문의 내역 관리</a>
                         </div>
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item text-danger" onclick="event.preventDefault(); document.getElementById('logoutForm').submit();">로그아웃</a>
