-돌봄사: 예약된 돌봄 상세 정보 페이지(나의 문의 내역 드롭다운 메뉴 추가)

--- a/src/main/resources/templates/schedule/schedule-detail.html
+++ b/src/main/resources/templates/schedule/schedule-detail.html
@@ -224,6 +224,11 @@
         <button id="cancelReservation" class="btn btn-danger" th:data-reservation-id="${schedule.id}"
                 th:if="${schedule.status.name() != 'CANCEL'}">예약 취소</button>
         <button class="btn btn-secondary" onclick="history.back()">뒤로 가기</button>
+
+        <a class="btn btn-warning"
+           th:href="@{/pets-care/reports/users/{memberId}/new(memberId=${schedule.customerId})}">
+            유저 신고하기
+        </a>
     </div><br>
 
     <!-- 리뷰가 존재하는 경우 -->
