--- a/src/main/resources/templates/report/user/user-report-detail.html
+++ b/src/main/resources/templates/report/user/user-report-detail.html
@@ -182,7 +182,10 @@
         </tr>
         <tr>
             <th>삭제 여부</th>
-            <td th:text="${userReport.isDeleted} ? '취소됨' : '처리중'"></td>
+            <td>
+                <span th:if="${userReport.isDeleted}" class="text-danger">삭제됨</span>
+                <span th:if="${!userReport.isDeleted}" class="text-success">처리중</span>
+            </td>
         </tr>
     </table>
 
